Button alignment fix

--- a/styles.css
+++ b/styles.css
@@ -576,7 +576,7 @@ body{
   box-shadow: 3px 3px 8px #888888;
   position: absolute;
   bottom: 15px;
-  left: 73px;
+  left: 62px;
   text-decoration: none;
 }
 
